code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_3.wast
(assert_invalid
  (module (func $func-index (unreachable) (call 1)))
  "unknown function"
)